[package]
name = "can-basic"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = { version = "1.0", default-features = false }
bitflags = { version = "2"}
lib_sockcan= {path ="../../sockcan"}
lib_dbcparser= {path ="../../dbcparser"}

[build-dependencies]
lib_dbcparser = { path = "../../dbcparser" }

[[bin]]
name = "can-read"
path = "src/read-can.rs"

[[bin]]
name = "can-bmc"
path = "src/read-bcm.rs"

[[bin]]
name = "can-dbc"
path = "src/parse-dbc.rs"

[[bin]]
name = "can-j1939"
path = "src/read-j1939.rs"
