[package]
name = "can-bms"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = { version = "1.0", default-features = false }
bitflags = { version = "2"}
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json={ version= "1.0", optional = true }
lib_sockcan= {path ="../../sockcan"}
lib_dbcparser= {path ="../../dbcparser"}
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
lib_dbcparser = { path = "../../dbcparser" }

[[bin]]
name = "can-bms"
path = "src/bms-display.rs"

[features]
default = ["serde","serde_json"]
