[package]
name = "can-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = { version = "1.0", default-features = false }
bitflags = { version = "2"}
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json={ version= "1.0", optional = true }
lib_sockcan= {path ="../../sockcan"}
lib_dbcparser= {path ="../../dbcparser"}

[build-dependencies]
lib_dbcparser= {path ="../../dbcparser"}

[[bin]]
name = "can-read"
path = "src/read_can.rs"

[[bin]]
name = "can-bmc"
path = "src/read_bcm.rs"

[[bin]]
name = "can-dbc"
path = "src/parse_dbc.rs"

[[bin]]
name = "can-display"
path = "src/can-display.rs"

[features]
default = ["serde","serde_json"]